storage/maria/ha_maria.h
@@ -161,5 +161,5 @@ public:
   {
     return file;
   }
-  static int implicit_commit(THD *thd);
+  static int implicit_commit(THD *thd, bool new_trn);
 };
